Prevent text overflow in comment preview

--- a/assets/css/components/_comments.scss
+++ b/assets/css/components/_comments.scss
@@ -56,6 +56,10 @@
   margin-bottom: $small-spacing;
   min-height: 118px;
   padding: $small-spacing;
+
+  pre {
+    overflow-x: auto;
+  }
 }
 
 .comment-preview-text-button,
